[package]
name = "rnm"
version = "0.0.1"
edition = "2021"
description = "Rust NPM registry Manager"
homepage = "https://github.com/Asarua/rnm"
documentation = "https://github.com/Asarua/rnm"
repository = "https://github.com/Asarua/rnm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.0"
clap = { version = "4.2.7", features = ["derive", "env"] }
colored = "2.0.0"
once_cell = "1.17.1"
rust-ini = "0.18.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_ini = "0.2.0"
serde_json = "1.0.96"
thiserror = { version = "1.0.40"}
webbrowser = "0.8.9"
